--- a/graphite/collectd/graphite.conf
+++ b/graphite/collectd/graphite.conf
@@ -1,6 +1,7 @@
+LoadPlugin write_graphite
 <Plugin write_graphite>
-  <Node "juggernaut.monitor.now">
-    Host "juggernaut.monitor.now"
+  <Node "datalake">
+    Host "localhost"
     Port "2003"
     Protocol "tcp"
     LogSendErrors true
