--- a/graphite/conf/storage-schemas.conf
+++ b/graphite/conf/storage-schemas.conf
@@ -19,15 +19,7 @@
 # CARBON_METRIC_PREFIX and CARBON_METRIC_INTERVAL settings
 [carbon]
 pattern = ^carbon\.
-retentions = 60s:90d
-
-[collectd]
-pattern = ^collectd.*\.
-retentions = 60s:90d
-
-[app]
-pattern = ^app.*\.
-retentions = 60s:90d
+retentions = 60:90d
 
 [default_1min_for_1day]
 pattern = .*
